WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53744
Number type input cannot be set to empty string if it has an initial value
https://bugs.webkit.org/show_bug.cgi?id=53744
Summary
Number type input cannot be set to empty string if it has an initial value
Kent Tamura
Reported
2011-02-03 17:32:10 PST
Number type input cannot be set to empty string if it has an initial value
Attachments
Patch
(5.61 KB, patch)
2011-02-03 17:39 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(5.60 KB, patch)
2011-02-28 16:33 PST
,
Kent Tamura
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-02-03 17:39:24 PST
Created
attachment 81158
[details]
Patch
Kent Tamura
Comment 2
2011-02-28 16:33:55 PST
Created
attachment 84148
[details]
Patch 2 Rebased
Darin Adler
Comment 3
2011-02-28 16:37:57 PST
Comment on
attachment 84148
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=84148&action=review
> Source/WebCore/dom/InputElement.h:120 > + // represents the emtpy value.
Typo here, “empty”.
> Source/WebCore/html/NumberInputType.cpp:281 > + return parseToDoubleForNumberType(proposedValue, 0) ? proposedValue : String("");
It’s more efficient to use emptyAtom here instead of String("").
Kent Tamura
Comment 4
2011-02-28 17:53:51 PST
Comment on
attachment 84148
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=84148&action=review
Thank you for reviewing! Landed as
http://trac.webkit.org/changeset/79954
with the following fixes.
>> Source/WebCore/dom/InputElement.h:120 >> + // represents the emtpy value. > > Typo here, “empty”.
Fixed.
>> Source/WebCore/html/NumberInputType.cpp:281 >> + return parseToDoubleForNumberType(proposedValue, 0) ? proposedValue : String(""); > > It’s more efficient to use emptyAtom here instead of String("").
Fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug