Number type input cannot be set to empty string if it has an initial value https://bugs.webkit.org/show_bug.cgi?id=53744

Reviewed by Darin Adler.

Source/WebCore:

We need to distinguish null strings and empty strings for
InputElementData::value. So InputType::sanitizeValue() also needs to
take care of it.

* dom/InputElement.h: Add a comment to InputElementData::value and
  setValue about null strings.
* html/InputType.h: Add a comment to sanitizeValue about null strings.
* html/NumberInputType.cpp:
(WebCore::NumberInputType::sanitizeValue): Returns a null string if the
  proposed value is a null string. Returning an empty string if the
  proposed value is not a number.

LayoutTests:

* fast/forms/input-value-sanitization-expected.txt:
* fast/forms/script-tests/input-value-sanitization.js: Add some tests.

Canonical link: https://commits.webkit.org/69851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79954 268f45cc-cd09-0410-ab3c-d52691b4dbfc