LayoutTests/fast/forms/script-tests/input-value-sanitization.js
@@ -1,10 +1,22 @@
 description('Tests for value sanitization algorithm.');
 
-var input = document.createElement('input');
+var input;
 
+debug('');
+debug('Number:');
+input = document.createElement('input');
+input.setAttribute('value', '65536');
+input.type = 'number';
+shouldBe('input.value', '"65536"');
+shouldBe('input.value = "256"; input.value', '"256"');
+shouldBe('input.value = ""; input.value', '""');
+
+
+debug('');
+debug('Range:');
+input = document.createElement('input');
 input.type = 'text';
 input.value = ':)';
-
 input.type = 'range';
 shouldBe('input.value', '"50"');
 
